Bug 27111: Update about:tor desktop version to work on mobile
Update torbutton, aboutTor(markup and styling) to work on mobile.

--- a/src/chrome/skin/aboutTor.css
+++ b/src/chrome/skin/aboutTor.css
@@ -199,6 +199,8 @@ body:not([showmanual]) .showForManual {
   width: 100%;
   max-width: 2200px;    /* room for our 20 circles */
   overflow: hidden;
+  position: absolute;
+  bottom: 0px;
 }
 
 .onion-pattern-row {
@@ -394,4 +396,38 @@ body[show-donation-banner="true"] #onboarding-overlay-button {
   transform: translateY(200px);
   transition: transform 0ms;
   position: absolute;
+}
+
+/*
+ * Mobile specific css
+ */
+
+.torcontent-logo {
+  display: none;
+}
+
+body[mobile] #torstatus-version,
+body[mobile] .searchbox,
+body[mobile] .top .heading2,
+body[mobile] #bottom {
+  display: none;
+}
+
+body[mobile] .top {
+  white-space: normal;
+  margin-top: 0px !important;
+}
+
+body[mobile] .torcontent-logo {
+  display: block;
+  margin-top: 20px;
+  width: 50%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body[mobile] .top .heading1 {
+  font-size: 62px;
+  line-height: 1.1
 }
